# pokemon_vector_semantic_change

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebook/: analysis_embedding.ipynb
output/: aligned_pokemon_embeddings_tsne.csv
src/: get_battle_team_data.py  learn_embedding.py  visualize_app.py
