[project]
name = "pokemon-vector-semantic-change"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "gensim>=4.3.3",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "streamlit>=1.39.0",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.2.2",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
]
